infra/production/k8s/app-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-prod
  labels:
    name: uptime-prod
    environment: production
